--- a/src/Components/pill-menu.css
+++ b/src/Components/pill-menu.css
@@ -1,11 +1,12 @@
 .pill-menu {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     margin: 15px;
     padding: 15px;
     border-radius: 35px;
     padding-right: 8px;
+    font-weight: bold;
 }
 .pill-menu .primary {
     border-radius: 35px;
